# Hackathon-2-Five-Phases

./: .dockerignore  .gitignore  API_CONTRACT.md  BUILD_SUCCESS.md  BUILD_SUMMARY.md  CICD_SUMMARY.md  CLAUDE.md  CONNECTIVITY_FIX_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DOCKER_CICD_SUMMARY.md  DOCKER_COMMANDS.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  FIX_SUMMARY.md  FRONTEND_BACKEND_DIAGNOSIS.md  GITHUB_PAGES_DEPLOYMENT.md  HF_SPACES_SETUP_GUIDE.md  HF_SPACES_TROUBLESHOOTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  ISSUES_AND_FIXES.txt  PHASE2_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  SUMMARY.md  TEST_AND_DEPLOY_CHECKLIST.md  create_hf_space.py  docker-compose.prod.yml  docker-compose.yml  index.html  index.txt  pyproject.toml  requirements.txt  space.yaml  sync_hf_space.py  test_bcrypt_fix.py  upload_hf_simple.py  (+3 more)
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  SECURITY.md  __init__.py  alembic.ini  docker-entrypoint.sh  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  test_basic.py  test_end_to_end.py  test_implementation.py
backend/alembic/: env.py  rollback.sql
backend/alembic/versions/: 20260103_0001_enable_uuid_extension.py  20260103_0002_add_task_columns.py  20260103_0003_create_tags_table.py  20260103_0004_create_task_tags_table.py  20260103_0005_create_subtasks_table.py  20260103_0006_create_user_settings_table.py  20260103_0007_create_indexes.py  20260105_0003_add_fulltext_search.py  20260108_0008_placeholder.py  20260109_0009_create_users_table.py  20260109_0010_update_users_table_schema.py  20260109_0011_add_missing_task_columns.py  20260110_0012_add_task_filters_table.py  3ea0fc97c2a4_initial_migration.py
backend/src/: __init__.py  app.ts  config.py  main.py  server.ts
backend/src/api/: __init__.py  admin_router.py  auth.py  auth_router.py  backup_router.py  cache_router.py  dashboard_router.py  evaluation_router.py  filter_router.py  gdpr_router.py  main.py  notification_router.py  optimization_router.py  phase_router.py  priority_router.py  project_router.py  security.py  submission_router.py  task_router.py  tasks.py  team_router.py  user_router.py
backend/src/auth/: auth_handler.py  better_auth_setup.py
backend/src/config/: api_version.py  auth.py  database.py  database.ts  db_session.py  logging.py  settings.py
backend/src/controllers/: analyticsController.ts  authController.ts  healthController.ts  subtaskController.ts  tagController.ts  taskController.ts  userController.ts
backend/src/database/: config.py  database.py
backend/src/db/: __init__.py  session.py
backend/src/middleware/: __init__.py  auth.py  auth.ts  cors.py  dashboard_access.py  errorHandler.ts  error_handler.py  logging.py  rate_limit.py  rbac.py  security.py
backend/src/models/: Analytics.ts  Subtask.ts  (+24 more)
backend/tests/: __init__.py  test_api.py
(+472 files in other folders)
