[project]
name = "hackathon-ii-todo"
version = "0.1.0"
description = "CLI Todo Application - Spec-Driven Development Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.workspace]
members = [
    "backend",
]
